feat: Implement Pulse feature with daily checks, dedicated API routes, and new frontend components.

--- a/be/package.json
+++ b/be/package.json
@@ -9,12 +9,18 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.1",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.1.0",
+    "@types/node-cron": "^3.0.11",
+    "axios": "^1.13.2",
     "better-auth": "^1.4.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mastra": "^0.18.9",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
