--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
+  pulse-db:
+    image: postgres:17-alpine
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: template_db
+      POSTGRES_DB: pulse_db
     ports:
       - "5432:5432"
     volumes:
@@ -16,7 +16,7 @@ services:
     build:
       context: ./be
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/template_db?schema=public
+      DATABASE_URL: postgresql://postgres:password@pulse-db:5432/pulse_db?schema=public
       PORT: 3001
       FRONTEND_URL: http://localhost:8100
       BETTER_AUTH_URL: http://localhost:3001
@@ -25,7 +25,7 @@ services:
     ports:
       - "3001:3001"
     depends_on:
-      - postgres
+      - pulse-db
 
   frontend:
     build:
