--- a/be/package.json
+++ b/be/package.json
@@ -19,13 +19,17 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mastra": "^0.18.9",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^6.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
