--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port=8100",
+    "dev": "VITE_API_URL=http://localhost:3000 vite --port=8100",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
