--- a/be/package.json
+++ b/be/package.json
@@ -6,6 +6,7 @@
     "dev": "ts-node --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "migrate": "npx prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "dependencies": {
