--- a/be/package.json
+++ b/be/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "migrate": "npx prisma migrate deploy",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "setup": "ts-node --transpile-only src/setup.ts"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.1",
